# packages/server/src/main.ts
@@ -7,79 +7,182 @@ import { setupContainer } from './di-containers/setup-container'
 import {
   ErrorResult,
   MessageResult,
+  SaveUserParams,
+  VerifyAccessTokenParams,
   VerifyAccessTokenResult,
+  VerifyIdTokenParams,
+  VerifyIdTokenResult,
 } from './generated/api/@types'
 import { UserRepository } from './models/user/user-repository'
+import {
+  buildLocalDdbClient,
+  buildUsersTableDef,
+  refreshDdbTable,
+} from './testing-utils/ddb'
 import { errorToJson } from './utils/error'
 import { Logger } from './utils/logger'
 
-const container = setupContainer()
-
-const app = express()
-app.use(cors())
-app.use(express.json())
-app.use(
-  openApiValidator.middleware({
-    apiSpec: '../../openapi.yml',
+const main = async () => {
+  const ddbClient = buildLocalDdbClient({})
+  const container = setupContainer({ ddbClient })
+  await refreshDdbTable({
+    ddbClient,
+    tableName: container.get<string>(serviceIds.USERS_TABLE_NAME),
+    tableDef: buildUsersTableDef(
+      container.get<string>(serviceIds.USERS_TABLE_NAME)
+    ),
   })
-)
 
-/**
- * NiseLine Original API
- */
-app.get('/niseline/api/ping', (req, res) => {
-  const responseBody: MessageResult = {
-    message: 'Pong.',
-  }
-  return res.send(responseBody)
-})
+  const app = express()
+  app.use(cors())
+  app.use(express.json())
+  app.use(
+    express.urlencoded({
+      extended: true,
+    })
+  )
+  app.use(
+    openApiValidator.middleware({
+      apiSpec: '../../openapi.yml',
+    })
+  )
 
-/**
- * Login API
- */
-app.get('/oauth2/v2.1/verify', async (req, res) => {
-  const logger = container.get<Logger>(serviceIds.LOGGER)
-  try {
-    const userRepository = container.get<UserRepository>(
-      serviceIds.USER_REPOSITORY
-    )
-    const { access_token: userId } = req.query
-
-    const user = await userRepository.findById(userId as string)
-    if (user == null) {
-      const errorResult: ErrorResult = {
-        error: 'invalid_request',
-        error_description: 'access token expired',
-      }
-      return res.status(400).send(errorResult)
-    }
-
-    const responseBody: VerifyAccessTokenResult = {
-      scope: 'profile',
-      client_id: '1234567890',
-      expires_in: 2591659,
+  /**
+   * NiseLine Original API
+   */
+  app.get('/niseline/api/ping', (_req, res) => {
+    const responseBody: MessageResult = {
+      message: 'Pong.',
     }
     return res.send(responseBody)
-  } catch (e: unknown) {
-    logger.error({ error: errorToJson(e as Error) })
-    return res.status(500).send({})
-  }
-})
+  })
 
-// app.post('/oauth2/v2.1/verify', (req, res) => {})
+  app.put('/niseline/api/users', async (req, res) => {
+    const logger = container.get<Logger>(serviceIds.LOGGER)
+    try {
+      const userRepository = container.get<UserRepository>(
+        serviceIds.USER_REPOSITORY
+      )
+      const reqBody: SaveUserParams = req.body
 
-// app.get('/v2/profile', (req, res) => {})
+      const user = await userRepository.save({
+        id: reqBody.id,
+        accessToken: reqBody.accessToken,
+        idToken: reqBody.idToken,
+        email: reqBody.email,
+        name: reqBody.name,
+        picture: reqBody.picture,
+        channelId: '',
+      })
+      if (user == null) {
+        const errorResult: ErrorResult = {
+          error: 'invalid_request',
+          error_description: 'access token expired',
+        }
+        return res.status(400).send(errorResult)
+      }
 
-// /**
-//  * Messaging API
-//  */
-// app.post('/v2/bot/message/reply', (req, res) => {})
+      const responseBody: VerifyAccessTokenResult = {
+        scope: 'profile',
+        client_id: '1234567890',
+        expires_in: 2591659,
+      }
+      return res.send(responseBody)
+    } catch (e: unknown) {
+      logger.error({ error: errorToJson(e as Error) })
+      return res.status(500).send({})
+    }
+  })
 
-// app.post('/v2/bot/message/push', (req, res) => {})
+  /**
+   * Login API
+   */
+  app.get('/oauth2/v2.1/verify', async (req, res) => {
+    const logger = container.get<Logger>(serviceIds.LOGGER)
+    try {
+      const userRepository = container.get<UserRepository>(
+        serviceIds.USER_REPOSITORY
+      )
 
-const port = process.env.PORT ?? '3000'
+      const {
+        verifyAccessTokenParams: { access_token: accessToken },
+      } = req.query as {
+        verifyAccessTokenParams: VerifyAccessTokenParams
+      }
 
-app.listen(Number(port), '0.0.0.0', () => {
-  // eslint-disable-next-line no-console
-  console.log('start')
-})
+      const user = await userRepository.findByAccessToken(accessToken as string)
+      if (user == null) {
+        const errorResult: ErrorResult = {
+          error: 'invalid_request',
+          error_description: 'access token expired',
+        }
+        return res.status(400).send(errorResult)
+      }
+
+      const responseBody: VerifyAccessTokenResult = {
+        scope: 'profile',
+        client_id: '1234567890',
+        expires_in: 2591659,
+      }
+      return res.send(responseBody)
+    } catch (e: unknown) {
+      logger.error({ error: errorToJson(e as Error) })
+      return res.status(500).send({})
+    }
+  })
+
+  app.post('/oauth2/v2.1/verify', async (req, res) => {
+    const logger = container.get<Logger>(serviceIds.LOGGER)
+    try {
+      const userRepository = container.get<UserRepository>(
+        serviceIds.USER_REPOSITORY
+      )
+      const reqBody: VerifyIdTokenParams = req.body
+      const { id_token: idToken } = reqBody
+
+      const user = await userRepository.findByIdToken(idToken as string)
+      if (user == null) {
+        const errorResult: ErrorResult = {
+          error: 'invalid_request',
+          error_description: 'Invalid IdToken.',
+        }
+        return res.status(400).send(errorResult)
+      }
+
+      const responseBody: VerifyIdTokenResult = {
+        iss: 'http://example.com',
+        sub: user.id,
+        aud: '1234567890',
+        exp: 1504169092,
+        iat: 1504263657,
+        nonce: '0987654asdf',
+        amr: ['pwd'],
+        name: user.name,
+        picture: user.picture,
+        email: user.email,
+      }
+      return res.send(responseBody)
+    } catch (e: unknown) {
+      logger.error({ error: errorToJson(e as Error) })
+      return res.status(500).send({})
+    }
+  })
+
+  // app.get('/v2/profile', (req, res) => {})
+
+  // /**
+  //  * Messaging API
+  //  */
+  // app.post('/v2/bot/message/reply', (req, res) => {})
+
+  // app.post('/v2/bot/message/push', (req, res) => {})
+
+  const port = process.env.PORT ?? '3000'
+
+  app.listen(Number(port), '0.0.0.0', () => {
+    // eslint-disable-next-line no-console
+    console.log('start')
+  })
+}
+
+main()
